pwa/training/training.css
body {
  color: green;
  font-family: 'Nanum Gothic', 'Helvetica', 'Verdana', sans-serif;
  line-height: 1;
  margin: 0;
  margin-bottom: 2rem;
  padding: 0 15px;
}
body .all-content {
  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
  margin: 0 auto;
  text-align: center;
}
body div.desc {
  margin: 0 auto 1.5rem;
  padding: 0;
  width: 98%;
}
  p {
    line-height: 1.5;
  }
  h1,
  h2,
  h3,
  h4 {
    font-weight: normal;
    margin: 0 auto;
    padding: 0;
  }
  h1 {
    display: inline-block;
    font-weight: bold;
  }
  h3 {
    line-height: 1.3;
    margin: 1em auto;
    max-width: 600px;
  }

a {
  color: #004c6a;
  font-size: 14px;
}
  a:hover,
  a:active,
  a:focus {
    color: #008cba;
    opacity: 0.8;
  }
  a.b {
    /*color: #008cba;*/
    color: hsla(195, 100%, 41%, 1);
    font-weight: normal;
  }
header h1 {
  color: #43616a;
  font-size: 28px;
  line-height: 1.6;
  margin: 15px 0 5px;
  padding: 0;
}
  header h1:hover,
  header h1:active,
  header h1:focus {
    color: #008cba;
    opacity: 0.8;
  }
  #hdrLogo h1 {
    cursor: pointer;
  }
.header-below {
  border-bottom: 1px solid hsla(195, 100%, 41%, 0.5);
  border-top: 1px solid hsla(195, 100%, 41%, 0.5);
  color: green;
  line-height: 1.35;
  margin: 0 auto;
  padding: 1rem 0;
  text-align: center;
  width: 90%;
}
.header-below > div {
  margin: 0 auto;
  max-width: 650px;
}
footer {
  margin: 0 auto;
  text-align: center;
  width: 98%;
}
  footer h2 {
    color: #999999;
    font-size: 18px;
    line-height: 1;
    margin: 20px auto 10px;
    padding: 0;
  }

/* New: Page-specific */
.accordion {
  margin: 0 auto;
  max-width: 700px;
  padding: 0;
  width: 100%;
  outline: 1px solid orange;
}
.accordion li {
  vertical-align: top;
  cursor: pointer;
  display: inline-block;
  position: relative;
  width: 40%;
  outline: 3px solid purple;
}

/* Course Header - Host */
.accordion li:nth-child(odd) {
  /*display: inline-block;*/
  /*margin: 1rem 0;*/
  outline: 1px solid blue;
}
  /* Course Header - Host Name */
  .accordion li:nth-child(odd) > div:nth-child(1) {
    color: rgba(0, 106, 176, .65);
    display: inline-block;
    font-family: 'Palanquin Dark';
  }
  /* Course Header - Completion % */
  .accordion li:nth-child(odd) > div:nth-child(2) {
    color: green;
    display: inline-block;
    font-size: 1.25em;
    font-family: 'Permanent Marker';
    font-weight: normal;
    margin: 0 0 0 2rem;
    font-style: normal;
  }

/* Courses - Primary Focus */
.accordion li:nth-child(even) {
  /* background-color: lightyellow; */
  background-color: hsl(60, 100%, 94%);
  border: 1px solid lightblue;
  /*border-bottom: 1px solid hsla(195, 100%, 41%, 0.5);*/
  color: gray;
  /*display: inline-block;*/
  /*height: 100px;*/
  max-height: 100px;
  /*margin: 0 0 0 1.5rem;*/
  outline: 1px solid red;
  overflow: hidden;
  padding: 0.5rem;
  position: relative;
  transition: all 2.5s ease-in;
  transition-delay: 0s;
}
.accordion li:nth-child(even)::after {
  /*animation-fill-mode: forwards;*/
  /*animation: show-it 1.5s;*/
  /*animation-delay: 0s;*/
  background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
  content: '';
  height: 115px;
  position: absolute;
    top: .05rem;
    left: .05rem;
  width: 100%;
}
  .accordion li.active:nth-child(even) {
    background-color: hsl(60, 80%, 94%);
    color: green;
    /*height: auto;*/
    max-height: 2500px;
    transition: all 15s ease-out;
  }
  .accordion li.active:nth-child(even)::after {
    animation-fill-mode: backwards;
    animation: hide-it 2.5s;
    /*animation-delay: 1s;*/
    content: '';
    height: 0px;
  }
  .accordion li:nth-child(even) h2 {
  }
  .accordion li:nth-child(even) div.progress-sub {
  }
  .accordion li:nth-child(even) div.li-body {
  }

@keyframes show-it {
  0% {
    height: 0px;
  }
  1% {
    height: 0px;
  }
  100% {
    height: 115px;
  }
}
@keyframes hide-it {
  0% {
    height: 115px;
  }
  0% {
    height: 0px;
  }
  100% {
    height: 0px;
  }
}

ul {
  list-style: none;
  margin: 0;
}
  ul h1 {
    font-weight: normal;
  }

.progress-top,
.progress-sub {
  margin: 0;
  padding: 0;
  white-space: nowrap;
}
.progress-sub {
  background-color: rgba(0, 106, 176, .65);
  border-right: 1px solid gray;
  height: 5px;
  margin-top: 0.5rem;
}

.nowrap,
.no-wrap {
  white-space: nowrap;
}
.hide,
.hidden {
  display: none;
}

/* Borrowed from: My First PWA - https://github.com/KDCinfo/snippets/tree/master/pwa/your-first-pwapp */
.loader {
  left: 50%;
  top: 50%;
  position: fixed;
  -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  transition: all 0.25s ease-out;
}
.loader #spinner {
  box-sizing: border-box;
  opacity: 1;
  /*stroke: #673AB7;*/
  /*stroke: #008cba;*/
  stroke: #004c6a;
  stroke-width: 5px;
  -webkit-transform-origin: 50%;
          transform-origin: 50%;
  -webkit-animation: line 1.6s cubic-bezier(0.4, 0, 0.2, 1) infinite, rotate 3.6s linear infinite;
          animation: line 1.6s cubic-bezier(0.4, 0, 0.2, 1) infinite, rotate 3.6s linear infinite;
}
@keyframes rotate {
  from {
    transform: rotate(0); }
  to {
    transform: rotate(450deg); }
}

@keyframes line {
  0% {
    stroke-dasharray: 2, 85.964;
    transform: rotate(0); }
  50% {
    stroke-dasharray: 65.973, 21.9911;
    stroke-dashoffset: 0; }
  100% {
    stroke-dasharray: 2, 85.964;
    stroke-dashoffset: -65.973;
    transform: rotate(90deg); }
}

.main-wrapper {
  display: grid;
    grid-column-gap: 1rem;
    grid-row-gap: 20px;
    grid-template-areas:
      "pageleft";
    grid-template-columns: 1fr;
  justify-content: center;
  margin: 0 auto;
  width: 90%;
  /* 250px | min: 300px ? */
  /* pageleft | pageright */
}
  .main-wrapper.maxit {
    grid-template-areas:
      "pageleft"
      "pageright";
    grid-template-columns: 1fr;
  }
  .main-wrapper .content-wrapper {
    display: none;
    opacity: 0;
    transition: all 0.5s;
  }
  .main-wrapper .content-wrapper .content {
    opacity: 0;
    transition: all 0.5s;
  }

@media (min-width: 675px) {
  .main-wrapper.maxit {
    grid-template-areas:
      "pageleft pageright";
    grid-template-columns: 275px minmax(auto, 1000px);
    grid-column-gap: 2em;
  }
}

main.main {
  grid-area: pageleft;
  padding: 0 0.75rem 1rem;
  vertical-align: top;
  white-space: normal;

  /* From CodePen */
  align-items: stretch;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  margin: 0 auto;
  padding: 0 0.5rem 1rem;
  position: relative;
  transition: all 2s;
}
  .main-wrapper.maxit main.main {
    max-height: 200px;
    overflow: auto;
  }
  .main-wrapper.maxit .content-wrapper {
    display: inline-block;
    grid-area: pageright;
    margin: 0;
    opacity: 1;
    padding: 1rem 0.5rem;
    text-align: center;
    transition: all 0.5s;
    vertical-align: top;
    width: calc(100% - 15px);
      /*max-width: 800px;*/
      min-width: 300px;
  }
    .content {
      margin: 0 auto;
      padding: 0;
      text-align: left;
      white-space: normal;
      width: 90%;
    }
  @media (min-width: 675px) {
    .main-wrapper.maxit main.main {
      width: 250px;
        min-width: 250px;
        max-width: 250px;
    }
    .main-wrapper.maxit main.main {
      max-height: calc(100vh - 360px);
      /*max-height: calc(100vh - 250px);*//* @TODO: Restore after WIP */
      overflow: visible;
      width: calc(100% - 50px);
    }
  }
  @media (min-width: 1400px) {
    .main-wrapper {
      max-width: 1400px;
    }
    .main-wrapper.maxit {
      grid-template-columns: 600px auto;
      grid-column-gap: 1em;
    }
    .main-wrapper.maxit main.main {
      width: 550px;
        min-width: 550px;
        max-width: 550px;
    }
    .main-wrapper.maxit .content-wrapper {
      width: calc(100% - 15px);
    }
  }

.main-wrapper main.main .card { /* New */
  background-color: hsl(133, 100%, 80%);
  cursor: pointer;
  flex: 0 1 auto;
  margin: 0.5rem;
  padding: 0;
  position: relative;
    min-height: 100px;
    width: 200px;
  transition: top 0.5s, left 0.5s;
}
.main-wrapper main.main .item-node {
  /*display: flex;*/
  /*flex: 1 0 300px;*/
  /*flex-wrap: wrap;*/
  margin: 1rem 0.5rem 0;
  max-width: 250px;
}
  .main-wrapper main.main .item-node:hover {
    background-color: hsla(120, 100%, 75%, 0.25);
  }

  .main-wrapper main.main > div.item-node {
    visibility: hidden;
  }
  .main-wrapper main.main > div.item-dupe {
    position: absolute;
    visibility: visible;
  }

  .main-wrapper main.main .card > div {
    /*outline: 1px solid red; */
    margin: 0.5rem;
    padding: 0;
  }

  .c-courseVendorName,
  .c-courseVendor {
    color: rgba(0, 106, 176, .65);
    font-family: 'Palanquin Dark';
    width: calc(100% - 1rem);
  }
  .c-courseProgress,
  .c-courseDateLast {
    color: green;
    font-family: 'Permanent Marker';
    font-size: 1.15em;
    font-style: normal;
    font-weight: normal;
    margin: 0;
    padding: 0;
  }
  .c-courseProgress::after {
    content: '%';
  }

/**
 *
 * Course Content (on right)
 *
 */

.close-it {
  background-color: lightblue;
  border-radius: 10px;
  box-shadow: 2px 2px;
  cursor: pointer;
  margin: 0 auto;
  padding: 0.5rem;
  width: 250px;
}
.close-it:hover {
  background-color: hsla(195, 53%, 79%, 0.6);
}

.course {
  position: relative;
}
  .expand-it {
    background-color: lightblue;
    border-radius: 10px;
    box-shadow: 2px 2px;
    cursor: pointer;
    height: 15px;
    line-height: 1;
    margin: 2px 0 0 4px;
    padding: 0.25rem;
    position: absolute;
      left: 0;
      top: 0;
      z-index: 1;
    text-align: center;
    width: 30px;
  }
  .expand-it:hover {
    background-color: hsla(195, 53%, 79%, 0.6);
  }
  .c-listheader {
    margin: 0 0 0 45px;
  }

.content-wrapper .content {
  line-height: 1.4;
}
.content-wrapper .content label {
  background-color: hsla(133, 100%, 80%, 0.3);
  border-bottom: 2px solid lightgreen;
  display: inline-block;
  font-weight: bold;
  margin: 0 0 0.25rem;
  min-width: 150px;
  padding: .5rem;
}
.content-wrapper .content span {
  color: darkblue;
}
.cc-courseDesc,
.cc-courseList {
  color: darkblue;
  margin: 0.5rem;
  padding: 0.25rem;
}

.cl-courseClassTitle,
.cl-courseClassProgress,
.cl-courseClassContent {
  /*outline: 1px solid red;*/
}
.cc-courseProgress::after,
.cl-courseClassProgress::after {
  content: '%';
}
.course.course-node {
  border-bottom: 2px solid lightgreen;
  border-left: 2px solid lightgreen;
  max-height: 50px;
  margin: 0 0 1rem;
  overflow: auto;
  padding: 0.25rem;
  transition: all 0.25s;
}
.course-expand {
  max-height: 300px;
}

